@@ -1,3 +1,8 @@
+2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/gtksourcecontextengine.c: (invalidate_tail):
+	made it actually work.
+
 2006-07-18  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourcecontextengine.c: (text_inserted),
